--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home"/>
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_collection"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard"/>
+        android:title="@string/title_collection"/>
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"/>
+        android:id="@+id/navigation_wishlist"
+        android:icon="@drawable/ic_baseline_favorite_24"
+        android:title="@string/title_wishlist"/>
+
+    <item
+        android:id="@+id/navigation_parties"
+        android:icon="@drawable/ic_baseline_casino_24"
+        android:title="@string/title_parties"/>
 
 </menu>
