--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="fr.app.myludo.ui.parties.PartiesViewModel" />
+            type="fr.app.myludo.ui.home.HomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +17,7 @@
         tools:context=".ui.collection.CollectionFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_games"
+            android:id="@+id/recyclerview_home"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:clipToPadding="false"
